@@ -9,6 +9,7 @@ use Spreadsheet::HTML::Presets::Beadwork;
 use Spreadsheet::HTML::Presets::Calculator;
 use Spreadsheet::HTML::Presets::Conway;
 use Spreadsheet::HTML::Presets::Chess;
+use Spreadsheet::HTML::Presets::Draughts;
 use Spreadsheet::HTML::Presets::TicTacToe;
 use Spreadsheet::HTML::Presets::Handson;
 use Spreadsheet::HTML::Presets::Sudoku;
@@ -268,62 +269,6 @@ sub calendar {
     return $self ? $self->generate( @args ) : Spreadsheet::HTML::generate( @args );
 }
 
-sub checkers {
-    my ($self,$data,$args);
-    $self = shift if ref($_[0]) =~ /^Spreadsheet::HTML/;
-    ($self,$data,$args) = $self ? $self->_args( @_ ) : Spreadsheet::HTML::_args( @_ );
-
-    my @data = (
-        [ '', '&#9922;', '', '&#9922;', '', '&#9922;', '', '&#9922;' ],
-        [ '&#9922;', '', '&#9922;', '', '&#9922;', '', '&#9922;', '' ],
-        [ '', '&#9922;', '', '&#9922;', '', '&#9922;', '', '&#9922;' ],
-        [ ('') x 8 ], [ ('') x 8 ],
-        [ '&#9920;', '', '&#9920;', '', '&#9920;', '', '&#9920;', '' ],
-        [ '', '&#9920;', '', '&#9920;', '', '&#9920;', '', '&#9920;' ],
-        [ '&#9920;', '', '&#9920;', '', '&#9920;', '', '&#9920;', '' ],
-    );
-
-    my $on  = $args->{on}  || 'red';
-    my $off = $args->{off} || 'white';
-
-    my @args = (
-        table => {
-            width => '65%',
-            style => {
-                border => 'thick outset',
-                %{ $args->{table}{style} || {} },
-            },
-            %{ $args->{table} || {} },
-        },
-        @_,
-        td => [
-            {
-                height => 65,
-                width  => 65,
-                align  => 'center',
-                style  => { 
-                    'font-size'         => 'xx-large',
-                    border              => 'thin inset',
-                    'background-color'  => [ ($off, $on)x4, ($on, $off)x4 ],
-                    %{ $args->{td}{style} || {} },
-                },
-                %{ $args->{td} || {} },
-            }, sub { $_[0] ? qq(<div class="game-piece">$_[0]</div>) : '' }
-        ],
-        tgroups  => 0,
-        headless => 0,
-        pinhead  => 0,
-        matrix   => 1,
-        wrap     => 0,
-        fill     => '8x8',
-        data     => \@data,
-    );
-
-    my $js    = Spreadsheet::HTML::Presets::Chess::_javascript( %$args );
-    my $table = $self ? $self->generate( @args ) : Spreadsheet::HTML::generate( @args );
-    return $js . $table;
-}
-
 sub _js_wrapper {
     my %args = @_;
 
@@ -427,15 +372,6 @@ Generates a static maze.
 
   maze( fill => '10x10', on => 'red', off => 'black' ) 
 
-=item * C<checkers( on, off, %params )>
-
-Generates a checkers game board (US). Currently you can only
-move the pieces around without regard to any rules. Defaults
-to red and white squares which can be overriden with C<on>
-and C<off>, respectively:
-
-  checkers( on => 'blue', off => 'gray' ) 
-
 =back
 
 =head1 MORE PRESETS
@@ -465,6 +401,11 @@ Turn cell backgrounds into Conway's game of life.
 =item * L<Spreadsheet::HTML::Presets::TicTacToe>
 
 Creats a Tic-Tac-Toe board.
+
+=item * L<Spreadsheet::HTML::Presets::Draughts>
+
+AKA Checkers. Work in progress. Hope to interface with pre-existing
+Javascript Chess engine someday (or write my own).
 
 =item * L<Spreadsheet::HTML::Presets::Chess>
 
