@@ -1,7 +1,7 @@
 #!perl -T
 use strict;
 use warnings FATAL => 'all';
-use Test::More tests => 8;
+use Test::More tests => 12;
 
 use Spreadsheet::HTML;
 
@@ -37,6 +37,14 @@ is scrub( Spreadsheet::HTML::checkers( sorted_attrs => 1 ) ),
     $html,
     "checkers as function correct";
 
+is scrub( $generator->draughts() ),
+    $html,
+    "draughts as method correct";
+
+is scrub( Spreadsheet::HTML::draughts( sorted_attrs => 1 ) ),
+    $html,
+    "draughts as function correct";
+
 $html = '<table border="1"><tr><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9922;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9922;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9922;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9922;</div></td></tr><tr><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9922;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9922;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9922;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9922;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td></tr><tr><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9922;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9922;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9922;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9922;</div></td></tr><tr><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td></tr><tr><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td></tr><tr><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9920;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9920;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9920;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9920;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td></tr><tr><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9920;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9920;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9920;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9920;</div></td></tr><tr><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9920;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9920;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9920;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td><td align="center" height="65" style="background-color: red; border: thin inset; font-size: xx-large;" width="65"><div class="game-piece">&#9920;</div></td><td align="center" height="65" style="background-color: white; border: thin inset; font-size: xx-large;" width="65">&nbsp;</td></tr></table>';
 
 is scrub( $generator->checkers( table => { border => 1 } ) ),
@@ -46,6 +54,14 @@ is scrub( $generator->checkers( table => { border => 1 } ) ),
 is scrub( Spreadsheet::HTML::checkers( sorted_attrs => 1, table => { border => 1 } ) ),
     $html,
     "checkers can override params (function)";
+
+is scrub( $generator->draughts( table => { border => 1 } ) ),
+    $html,
+    "draughts can override params (method)";
+
+is scrub( Spreadsheet::HTML::draughts( sorted_attrs => 1, table => { border => 1 } ) ),
+    $html,
+    "draughts can override params (function)";
 
 
 
