@@ -3,6 +3,7 @@ Revision history for Spreadsheet-HTML
 1.21
     - sudoku javascript updated to check neighbors of current cell
     - checkerboard now accepts 'class' param (rotates class names)
+    - checkers() moved and aliased to Spreadsheet::HTML::Presets::Draughts::draughts()
 
 1.20
     - update copyright
